syntax = "proto3";

package Shop.Application.DTOs.User;

message UserFilter {
    string id = 1;
    string user_name = 2;
    string first_name = 3;
    string last_name = 4;
    string? economic_code = 5;
    string? national_code = 6;
    string? mobile = 7;
}
