syntax = "proto3";

package Shop.Application.DTOs.User;

message UserParameter {
    int32 current_page = 1;
    int32 take_page = 2;
    int32 page_count = 3;
    string filter = 4;
}
